Refactor unit tests (#393)